# RustVM

./: README.md
bitpack/: Cargo.toml
bitpack/src/: bitpack.rs  lib.rs
rum/: Cargo.toml
rum/src/: lib.rs  memory_handler.rs  memory_loader.rs  rum.rs  segment.rs  um_exec.rs
rumasm/: Cargo.toml
rumasm/src/: lib.rs  rumasm.rs
rumdump/: Cargo.toml
rumdump/src/: lib.rs  main.rs  rumdis.rs  rumload.rs
universalMachine/: Cargo.toml
universalMachine/src/: lib.rs  memory_handler.rs  memory_loader.rs  segment.rs  um_exec.rs  universal_machine.rs
