[package]
name = "rum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitpack = {path = "../bitpack"}
rumdump = {path = "../rumdump"}
byteorder = "1.4.3"

[[bin]]
edition = "2021"
name = "rum"
path = "src/rum.rs"

